--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,19 @@
-name: 'Wait'
-description: 'Wait a designated number of milliseconds'
+name: 'Semver Bump'
+description: 'Bump the designated semver component in a file.'
 inputs:
-  milliseconds:  # id of input
-    description: 'number of milliseconds to wait'
+  path:
+    description: 'path to file containing semver to bump'
     required: true
-    default: '1000'
-outputs:
-  time: # output will be available to future steps
-    description: 'The current time after waiting'
+  release-type:
+    description: 'semver component [major, minor, patch] to modify'
+    required: true
+  pre-release:
+    description: 'pre-release label'
+outputs: # output will be available to future steps
+  previous-version:
+    description: 'The previous version'
+  version:
+    description: 'The current version'
 runs:
   using: 'node12'
   main: 'dist/index.js'
