--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "javascript-action",
+  "name": "semver-bump-action",
   "version": "1.0.0",
-  "description": "JavaScript Action Template",
+  "description": "Action to bump file containing only semver",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
+    "url": "git+https://github.com/dinosu-actions/semver-bump.git"
   },
   "keywords": [
     "GitHub",
@@ -21,11 +21,12 @@
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
+    "url": "https://github.com/dinosu-actions/semver-bump/issues"
   },
-  "homepage": "https://github.com/actions/javascript-action#readme",
+  "homepage": "https://github.com/dinosu-actions/semver-bump#readme",
   "dependencies": {
-    "@actions/core": "^1.2.5"
+    "@actions/core": "^1.2.5",
+    "semver": "^7.3.5"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.31.1",
